--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap" rel="stylesheet">
     <!-- /GOOGLE FONTS -->
+     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>GIALLO BOOLEANDO</h1>
+    </header>
 </body>
 </html>
