feat: add recipe intro's img and list

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,59 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap"
+        rel="stylesheet">
     <!-- /GOOGLE FONTS -->
-     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <!-- HEADER -->
     <header>
         <h1>GIALLO BOOLEANDO</h1>
     </header>
+    <!-- /HEADER -->
+    <!-- MAIN -->
+    <main>
+        <!-- RECIPE INTRO -->
+        <section>
+            <div class="recipe-intro">
+                <h3>Dolci e dessert</h3>
+                <h2>Tiramisù<span> (Dolce Tradizionale)</span></h2>
+                <div class="row">
+                    <div>
+                        <img class="img-fluid" src="img/image (10).png" alt="Video Youtube preparazione tiramisù">
+                    </div>
+                    <div class="recipe-details col">
+                        <h3>In breve</h3>
+                        <ul>
+                            <li>
+                                <p>Difficoltà: <strong>Facile</strong></p>
+                            </li>
+                            <li>
+                                <p>Tempo: <strong>Facile</strong></p>
+                            </li>
+                            <li>
+                                <p>Porzione per: <strong>Facile</strong></p>
+                            </li>
+                            <li>
+                                <p>Costo: <strong>Facile</strong></p>
+                            </li>
+                            <li>
+                                <p><strong>Note </strong>+2 ore di riposo in frigo</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /RECIPE INTRO -->
+
+    </main>
+    <!-- /MAIN -->
+
+
 </body>
+
 </html>
