feat: add social buttons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&display=swap"
         rel="stylesheet">
     <!-- /GOOGLE FONTS -->
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- /FONT AWESOME -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -39,20 +44,40 @@
                                 <p>Difficoltà: <strong>Facile</strong></p>
                             </li>
                             <li>
-                                <p>Tempo: <strong>Facile</strong></p>
+                                <p>Tempo: <strong>40 min</strong></p>
                             </li>
                             <li>
-                                <p>Porzione per: <strong>Facile</strong></p>
+                                <p>Porzione per: <strong>8 persone</strong></p>
                             </li>
                             <li>
-                                <p>Costo: <strong>Facile</strong></p>
+                                <p>Costo: <strong>contenuto</strong></p>
                             </li>
                             <li>
-                                <p><strong>Note </strong>+2 ore di riposo in frigo</p>
+                                <p><strong>Note: </strong>+2 ore di riposo in frigo</p>
                             </li>
                         </ul>
                     </div>
                 </div>
+                <!-- SOCIAL BUTTONS -->
+                <div class="btn-social">
+                    <button class="btn"><i class="fa-brands fa-facebook"></i>
+                        <p><strong>FACEBOOK</strong></p>
+                    </button>
+                    <button class="btn"><i class="fa-brands fa-twitter"></i>
+                        <p><strong>TWITTER</strong>
+                    </button>
+                    <button class="btn"><i class="fa-brands fa-instagram"></i>
+                        <p><strong>INSTAGRAM</strong>
+                    </button>
+                    <button class="btn"><i class="fa-brands fa-pinterest"></i>
+                        <p><strong>PINTEREST</strong>
+                    </button>
+                    <button class="btn"><i class="fa-brands fa-youtube"></i>
+                        <p><strong>YOUTUBE</strong>
+                    </button>
+                </div>
+                <!-- /SOCIAL BUTTONS -->
+
             </div>
         </section>
         <!-- /RECIPE INTRO -->
