feat: add banner ads

--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
                     </button>
                 </div>
                 <!-- /SOCIAL BUTTONS -->
-
+                 <!-- BANNER ADS -->
+                 <img class="img-fluid banner" src="img/banner.png" alt="Banner con pubblicità corso cucina">
+                 <!-- /BANNER ADS -->
+                
             </div>
         </section>
         <!-- /RECIPE INTRO -->
-
+        
     </main>
     <!-- /MAIN -->
 
