--- a/index.html
+++ b/index.html
@@ -94,9 +94,35 @@
             </div>
          </section>
         <!-- /RECIPE PRESENTATION -->
-
     </main>
     <!-- /MAIN -->
+     <!-- FOOTER -->
+     <footer>
+        <div class="general-info">
+            <h4><small><i class="fa-regular fa-copyright"></i></small><strong> 2021 Giallo Booleano S.p.a.</strong></h4>
+        <p>Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</p>
+    </div>
+    <nav>
+        <ul>
+            <li>
+                <a href="#">About us</a>
+            </li>
+            <li>
+                <a href="#">Terms of use</a>
+            </li>
+            <li>
+                <a href="#">Privacy Policy</a>
+            </li>
+            <li>
+                <a href="#">Cookie Policy</a>
+            </li>
+            <li>
+                <a href="#">Disclaimer</a>
+            </li>
+        </ul>
+    </nav>
+      </footer>
+     <!-- /FOOTER -->
 
 
 </body>
