--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giallo Booleando</title>
+    <title>Giallo Booleano</title>
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
 <body>
     <!-- HEADER -->
     <header>
-        <h1>GIALLO BOOLEANDO</h1>
+        <h1>GIALLO BOOLEANO</h1>
     </header>
     <!-- /HEADER -->
     <!-- MAIN -->
