fix: fix recipe intro columns in desktop

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h3>Dolci e dessert</h3>
                 <h2>Tiramisù<span> (Dolce Tradizionale)</span></h2>
                 <div class="row">
-                    <div>
+                    <div class="recipe-video">
                         <img class="img-fluid" src="img/image (10).png" alt="Video Youtube preparazione tiramisù">
                     </div>
                     <div class="recipe-details col">
